--- a/wp-content/themes/bravuslogistica/assets/css/theme.css
+++ b/wp-content/themes/bravuslogistica/assets/css/theme.css
@@ -283,6 +283,15 @@ select:focus {
     margin-left: 5px;
 }
 
+.img-header img{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
 footer {
     margin-top: 4rem;
     padding: 0;
